Agentforce/force-app/main/default/objects/NPS_Question__mdt/NPS_Question__mdt.object-meta.xml
<CustomObject>
    <description>AD-180 - Stores the list of questions available for a Net Promoter Survey.</description>
    <label>NPS Question</label>
    <pluralLabel>NPS Questions</pluralLabel>
</CustomObject>