Agentforce/force-app/main/default/objects/NPS_Question__mdt/fields/Generate_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Generate_Action_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-180 - Define whether or not this question should auto generate an Action Plan</description>
    <label>Generate Action Plan?</label>
    <type>Checkbox</type>
</CustomField>