Agentforce/force-app/main/default/objects/NPS_Question__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>AD-180 - Controls the order in which the questions are displayed</description>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>