Agentforce/force-app/main/default/objects/NPS_Question__mdt/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>AD-180 - Stores the question to be asked</description>
    <label>Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>