Agentforce/force-app/main/default/objects/NPS_Question__mdt/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-180 - Denotes whether or not this question is required</description>
    <label>Required?</label>
    <type>Checkbox</type>
</CustomField>