Agentforce/force-app/main/default/objects/NPS_Question__mdt/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-180 - Denotes whether or not the question will prompt the entry of a score</description>
    <label>Score?</label>
    <type>Checkbox</type>
</CustomField>