Agentforce/force-app/main/default/objects/NPS_Question__mdt/fields/Score_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Score_Threshold__c</fullName>
    <description>AD-180 - Define the score threshold for a Question</description>
    <label>Score Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>