Agentforce/force-app/main/default/objects/NPS_Question__mdt/fields/Suggestion_for_improvement__c.field-meta.xml
<CustomField>
    <fullName>Suggestion_for_improvement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-180 - Denotes whether or not the flow will ask for a suggestion for improvement or not</description>
    <label>Suggestion for improvement?</label>
    <type>Checkbox</type>
</CustomField>